--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -1,8 +1,18 @@
 
 @import "./main.scss";
-@import "./component/MakeAppointment";
+@import "./content/MakeAppointment";
 @import "./component/location";
+@import './mixins/responsive';
 
+header{
+    height: 480px;
+    background-image: url(/image/img-of-content/header-for-contact.jpg);
+    background-size: cover;
+    @include responsive(md){
+        height: 230px;
+        
+    }
+}
 .working-hour {
     @include margin;
     margin: {
