--- a/sass/content/_MakeAppointment.scss
+++ b/sass/content/_MakeAppointment.scss
@@ -29,6 +29,7 @@
             border-radius: $borderRadius;
             border: none;
             background: $seconaryColor;
+            color: white;
             a{
                 color: white;
             }
@@ -55,7 +56,7 @@
             border-radius: 10px;
             border: 2px solid $primaryColor;
             background: #00000057;
-            header{
+            .header1{
                 color: white;
             }
 
