--- a/sass/content/_ourDoctor.scss
+++ b/sass/content/_ourDoctor.scss
@@ -4,6 +4,8 @@
 
 .our-doctor {
     @include column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 
     margin: {
@@ -35,7 +37,7 @@
         margin-bottom: 50px;
 
         @include responsive(xl) {
-            justify-content: center;
+            justify-content: end;
         }
 
         @include responsive(md) {
@@ -45,7 +47,7 @@
 
     .container {
         display: flex;
-        width: 94%;
+        width: 93%;
         gap: 40px;
 
         @include responsive(xl) {
@@ -67,16 +69,13 @@
                 width: 90%;
             }
             img {
-                height: 200px;
+                height: 203px;
             }
             .card-header {
                 width: 100%;
                 height: 200px;
                 @include centered;
 
-                @include responsive(md) {
-                    margin-left: 20%;
-                }
             }
 
             .card-footer {
