--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,7 +1,7 @@
 @import './main';
 @import './content/whyTheyChooseUs';
 @import './content/ourDoctor';
-@import './content/MakeAppointment';
+@import './component/feedback';
 @import "./component/location";
 @import './mixins/responsive';
 
