--- a/css/health-check-up.css
+++ b/css/health-check-up.css
@@ -203,6 +203,10 @@ header {
   font-family: sans-serif;
 }
 
+body {
+  background-color: rgb(241, 248, 249);
+}
+
 .container {
   display: flex;
   justify-content: center;
