--- a/sass/component/_card-service.scss
+++ b/sass/component/_card-service.scss
@@ -1,90 +1,115 @@
 @import './variable';
 @import './group-mxin';
 @import '../mixins/responsive';
-.container{
-    display: flex;
-    justify-content: center;
-}
-.container-card {
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-    margin: $mainMargin;
-    @include responsive(Laptop){
-        width: 90%;
-        justify-content: start;
-        
-    }
-    .card {
+.container {
+    margin-top: 100px;
+    @include centered;
+
+    .container-card {
+        display: flex;
+        flex-wrap: wrap;
+        width: 70%;
+        gap: 50px;
+        margin-left: 50px;
+        @include responsive(Desktop){
+            width: 80%;
+        }
         @include responsive(Laptop){
-            width: 30%; 
-            gap: 27px;
-            height: 200px;
             
+            width: 90%;
+            gap: 30px;
         }
         @include responsive(Tablet){
-            width: 47%;
-            
+            margin-left: 10px;
         }
         @include responsive(mobile){
-            width: 98%;
         }
-        width: 30%;
-        position: relative;
-        height: 250px;
-        background-color: #f2f2f2;
-        border-radius: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-        perspective: 1000px;
-        box-shadow: 0 0 0 5px #ffffff80;
-        transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
-        .card__content {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            padding: 20px;
-            box-sizing: border-box;
-            background-color:$mainColor;
-            transform: rotateX(-90deg);
-            transform-origin: bottom;
-            transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-
-            .card__description {
-                margin: 10px 0 0;
-                font-size: 14px;
-                color: #777;
-                line-height: 1.4;
+        .card {
+            @include responsive(Laptop){
+                width: 27%;
             }
+            @include responsive(Tablet){
+                width: 45%;
+            }
+            @include responsive(mobile){
+                width: 90%;
+            }
+            width: 27.5%;
+            margin-top: 25px;
+            background: white;
+            padding: .4em;
+            border-radius: 5px;
+            box-shadow: 10px 10px 5px rgb(182, 189, 191);
+
+            .card-image {
+                height: 210px;
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                border-radius: 6px 6px 0 0;
+                @include responsive(Laptop){
+                    height: 190px;
+                }
+
+                img {
+                    @include responsive(Desktop){
+                        width: 220px;
+                        height:210px ;
+                    }
+                    @include responsive(Laptop){
+                        width: 200px;
+                        height: 190px;
+                    }
+                    @include responsive(Tablet){
+                        width: 230px;
+                    }
+                    @include responsive(mobile){
+                        width: 290px;
+                        height: 210px;
+                    }
+                    margin-top: -30px;
+                    width: 255px;
+                    height: 220px;
+
+                }
+            }
+
+            .card-image:hover {
+                transform: scale(0.98);
+            }
+
+            .category {
+                text-transform: uppercase;
+                font-size: 0.7em;
+                font-weight: 600;
+                color: rgb(63, 121, 230);
+                padding: 10px 7px 0;
+            }
+
+            .category:hover {
+                cursor: pointer;
+            }
+
+            .heading {
+                font-size: 13px;
+                color: rgb(88, 87, 87);
+                padding: 7px;
+
+                .money {
+                    color: gray;
+                    font-weight: 400;
+                    font-size: 11px;
+                    padding-top: 20px;
+                }
+            }
+
+            .heading:hover {
+                cursor: pointer;
+            }
+
+
         }
     }
 
-    .card:hover {
-        transform: scale(1.05);
-        box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
-
-        .card__content {
-            transform: rotateX(0deg);
-        }
-
-        .card__title {
-            margin: 0;
-            font-size: 24px;
-            color: #333;
-            font-weight: 700;
-        }
-
-        svg {
-            scale: 0;
-        }
-
-    }
 }
