--- a/sass/service.scss
+++ b/sass/service.scss
@@ -1,4 +1,33 @@
 @import './main.scss';
 @import './component/card-service';
+@import './mixins/responsive';
 
+header {
+    background-image: url(/image/img-of-content/header1.webp);
+    background-size: cover;
+    height: 400px;
+
+    .image {
+        background-color: rgba(35, 121, 196, 0.867);
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: white;
+
+        p {
+            margin-bottom: -100px;
+            font-size: 23px;
+        }
+
+        b {
+            font-size: 70px;
+            @include responsive(mobile){
+                font-size: 40px;
+            }
+        }
+    }
+
+}
 
