--- a/css/contact.css
+++ b/css/contact.css
@@ -10,7 +10,7 @@ nav .nav-left {
   align-items: center;
   margin-left: 50px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1024px) {
   nav .nav-left {
     flex: 0.5;
   }
@@ -29,7 +29,7 @@ nav .nav-right {
 nav .nav-right input {
   display: none;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 730px) {
   nav .nav-right #menu__toggle {
     opacity: 0;
   }
@@ -98,7 +98,7 @@ nav .nav-right input {
     background-color: #CFD8DC;
   }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1024px) {
   nav .nav-right {
     flex: 1.5;
   }
@@ -126,12 +126,12 @@ footer .footer-container {
   justify-content: space-between;
   gap: 50px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: ) {
   footer .footer-container {
     gap: 30px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   footer .footer-container {
     flex-wrap: wrap;
     align-items: center;
@@ -143,12 +143,12 @@ footer .footer-container .footer-left {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: ) {
   footer .footer-container .footer-left {
     width: 300px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   footer .footer-container .footer-left {
     display: flex;
     justify-content: center;
@@ -161,7 +161,7 @@ footer .footer-container .footer-left img {
   width: 200px;
   margin-bottom: 110px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   footer .footer-container .footer-left img {
     margin-bottom: 0px;
   }
@@ -185,7 +185,7 @@ footer .footer-container .footer-right .contact-footer i {
   line-height: 42px;
   margin: 10px 15px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   footer .footer-container .footer-right {
     margin-top: 0px;
   }
@@ -212,7 +212,7 @@ header {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   .contact-us h1 {
     margin-top: 100px;
   }
@@ -236,7 +236,7 @@ header {
 .contact-us .check-schedule button a {
   color: white;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   .contact-us .check-schedule button {
     padding: 5px;
     margin-bottom: 10px;
@@ -248,7 +248,7 @@ header {
   align-items: end;
   margin-right: 50px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   .contact-us .container {
     margin-top: 20px;
     margin-right: 0px;
@@ -304,7 +304,7 @@ header {
   background-image: url(/image/img-of-content/header-for-contact.jpg);
   background-size: cover;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   header {
     height: 230px;
   }
@@ -324,7 +324,7 @@ header {
 .working-hour p, .working-hour li {
   font-size: 20px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: ) {
   .working-hour p, .working-hour li {
     font-size: 13px;
   }
