--- a/sass/component/_variable.scss
+++ b/sass/component/_variable.scss
@@ -3,5 +3,6 @@ $mainColor:rgb(171, 215, 239);
 $primaryColor:rgba(192, 190, 190, 0.943);
 $seconaryColor:blue;
 $borderRadius:10px;
-$tablecolor: red;
-$tablecolorblack: black;
+$color-bg: #f8f8f8;
+$card-padding: 20px;
+$grid-gutter: 31px;
