--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -5,7 +5,7 @@
     padding: 0;
     margin: 0;
     list-style-type: none;
-    font-family: sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 body{
     background-color: rgb(241, 248, 249);
