--- a/sass/service.scss
+++ b/sass/service.scss
@@ -1,51 +1,162 @@
-@import './main.scss';
-<<<<<<< HEAD
-@import './component/services-card';
-@import './mixins/responsive';
-header{
-    height: 480px;
-    background-image: url(/image/img-of-content/heaer-servicce.jpg);
-    background-size: cover;
-    @include responsive(md){
-        height: 230px;
-        
-    }
-    
-}
-=======
+@import './main';
 @import './component/card-service';
-<<<<<<< HEAD
 @import './mixins/responsive';
-=======
->>>>>>> df8e5c67d5b17d8d2fdae6d5f46bf2edfd49eb0d
->>>>>>> 45cd422c4bf221d83b0750231329ee7f2c1e80bc
 
 header {
     background-image: url(/image/img-of-content/header1.webp);
     background-size: cover;
     height: 400px;
+}
 
-    .image {
-        background-color: rgba(35, 121, 196, 0.867);
-        height: 100%;
+.image {
+    background-color: rgba(14, 59, 98, 0.867);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+
+    p {
+        font-size: 23px;
+        
+        
+    }
+
+    b {
+        font-size: 70px;
+        @include responsive(mobile) {
+            font-size: 60px;
+        }
+    }
+}
+
+.care {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .we-care {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        color: white;
-
-        p {
-            margin-bottom: -100px;
-            font-size: 23px;
+        @include responsive(Desktop) {
+            flex-direction: column;
+            width: 94%;
+            margin-bottom: 30px;
         }
 
-        b {
-            font-size: 70px;
-            @include responsive(mobile){
+        margin-top: 100px;
+        width: 80%;
+
+        .we-care-left {
+            flex: 1.5;
+
+            p {
                 font-size: 40px;
+                font-weight: bold;
+                color: rgb(42, 80, 133);
+
+                @include responsive(Desktop) {
+                    font-size: 30px;
+
+                }
             }
+        }
+
+        .we-care-right {
+            flex: 4;
+
+            p {
+                font-size: 15px;
+                margin-top: 10px;
+                color: rgb(42, 80, 133);
+            }
+        }
+    }
+}
+
+.our-service {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .title {
+        h1 {
+            color: rgba(14, 59, 98, 0.867);
         }
     }
 
 }
 
+.group-feedback {
+    margin: 100px 10px;
+    background: #ffffff;
+
+    .feedback {
+        img {
+            height: 410px;
+            @include responsive(Desktop) {
+                height: 390px;
+            }
+
+            @include responsive(Laptop) {
+                height: 280px;
+            }
+
+            @include responsive(Tablet) {
+                // background: #000;
+                height: 250px;
+            }
+            @include responsive(mobile) {
+                height: 315px;
+                display: none;
+            }
+        }
+
+        @include responsive (mobile) {
+            grid-template-columns: 1fr;
+        }
+
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        box-shadow: 1px 1px 5px 1px rgb(203, 30, 30);
+    }
+
+    .feedback-right {
+        margin-top: 20px;
+
+        
+        h1 {
+            @include responsive(Desktop) {
+                margin-top: 80px;
+                font-size: 25px;
+
+            }
+
+            @include responsive (Laptop) {
+                margin-top: 10px;
+            }
+
+            @include responsive(Tablet) {
+                font-size: 20px;
+            }
+            @include responsive(mobile) {
+                // margin-left: 24%;
+            }
+            
+
+            margin-top: 90px;
+        }
+
+        p {
+            @include responsive (Desktop) {
+                font-size: 15px;
+            }
+
+            @include responsive(Laptop) {
+                font-size: 13px;
+            }
+
+            font-size: 18px;
+            margin-top: 20px;
+        }
+    }
+}
