--- a/sass/component/_variable.scss
+++ b/sass/component/_variable.scss
@@ -6,3 +6,7 @@ $borderRadius:10px;
 $color-bg: #f8f8f8;
 $card-padding: 20px;
 $grid-gutter: 31px;
+$small: 480px;
+$medium: 768px;
+$large: 992px;
+$x-large: 1200px;
