--- a/sass/content/_MakeAppointment.scss
+++ b/sass/content/_MakeAppointment.scss
@@ -2,86 +2,85 @@
 @import '../component/group-mxin';
 @import '../mixins/responsive';
 
-.contact-us {
-    @include column;
+.contact {
+    display: flex;
     align-items: center;
+    justify-content: center;
+    margin-top: -100px;
 
-    h1 {
-        margin: {
-            top: 50px;
-            bottom: 50px;
-        }
-        @include responsive(md){
-            margin-top:100px;
-        }
+    h2 {
+        align-self: center;
     }
 
-    .check-schedule {
-        width: 100%;
-        height: 490px;
-        background-image: url(/image/img-of-content/form.jpg);
-        background-size: cover;
-        button {
-            width: 150px;
-            height: 45px;
-            margin-top: 30px;
-            margin-left: $mainMargin;
-            border-radius: $borderRadius;
-            border: none;
-            background: $seconaryColor;
-            color: white;
-            a{
-                color: white;
-            }
-            @include responsive(md) {
-                padding: 5px;
-                margin-bottom: 10px;
-            }
-        }
-    }
-    .container {
-        @include column;
-        align-items: end;
-        @include responsive(md){
-            margin-top: 20px;
-            margin-right: 0px;
-            align-items: center;
-        }
-        margin-right: $mainMargin;
-        .form-container {
-            width: 400px;
-            height: 350px;
-            @include centered;
+    .contactUs {
+        height: 500px;
+        width: 70%;
+        display: flex;
+        background: #233468d3;
+        color: aliceblue;
+        box-shadow: 1px 5px 2px 0px rgb(220, 219, 219);
+
+        .contactUs-left {
+            flex: 0.7;
+            display: flex;
             flex-direction: column;
-            border-radius: 10px;
-            border: 2px solid $primaryColor;
-            background: #00000057;
-            .header1{
-                color: white;
+            margin-left: 20px;
+            gap: 30px;
+
+            h2 {
+                margin-bottom: 20px;
             }
 
-            form {
-                @include centered;
+            .content {
+                
+
+            }
+
+        }
+
+        .contactUs-right {
+            flex: 1;
+            margin-top: 60px;
+
+            h3 {
+                margin-top: 10px;
+            }
+
+            .formBox {
+                position: relative;
+                width: 100%;
+                display: flex;
                 flex-direction: column;
-                input {
-                    margin-top: 25px;
-                    padding: 10px;
-                    width: 150%;
-                    border-radius: 5px;
+                gap: 20px;
+
+                .row50 {
+                    display: flex;
+                    gap: 30px;
+
+                    .inputBox {
+                        display: flex;
+                        flex-direction: column;
+                        width: 50%;
+                        border-bottom: 10px;
+
+                        input {
+                            padding: 10px;
+                            background-color: rgb(229, 233, 235);
+                        }
+                    }
+                }
+
+                button {
+                    width: 30%;
+                    height: 30px;
+                    border-radius: 10px;
                     border: none;
+                    background-color: rgb(158, 237, 237);
                 }
             }
-
-            button {
-                width: 100px;
-                height: 45px;
-                margin-top: 25px;
-                margin-right: 50px;
-                border-radius: $borderRadius;
-                border: none;
-                background: $seconaryColor;
-                color: white;
-            }
         }
     }
+}
+textarea{
+    width: 99.5%;
 }
