--- a/sass/content/_MakeAppointment.scss
+++ b/sass/content/_MakeAppointment.scss
@@ -13,12 +13,17 @@
     }
 
     .contactUs {
-        height: 500px;
         width: 70%;
         display: flex;
         background: #233468d3;
         color: aliceblue;
         box-shadow: 1px 5px 2px 0px rgb(220, 219, 219);
+        @include responsive(Laptop){
+            width: 85%;
+        }
+        @include responsive(Tablet){
+            flex-direction: column;
+        }
 
         .contactUs-left {
             flex: 0.7;
@@ -26,9 +31,12 @@
             flex-direction: column;
             margin-left: 20px;
             gap: 30px;
-
             h2 {
                 margin-bottom: 20px;
+                @include responsive(Laptop){
+                    font-size: 22px;
+                    margin-top: 10px;
+                }
             }
 
             .content {
@@ -41,7 +49,12 @@
         .contactUs-right {
             flex: 1;
             margin-top: 60px;
-
+            @include responsive(Laptop){
+                margin-top: 75px;
+            }
+            @include responsive(Tablet){
+                margin-top: 30px;
+            }
             h3 {
                 margin-top: 10px;
             }
@@ -56,6 +69,9 @@
                 .row50 {
                     display: flex;
                     gap: 30px;
+                    @include responsive(Laptop){
+                        gap: 10px;
+                    }
 
                     .inputBox {
                         display: flex;
@@ -66,6 +82,9 @@
                         input {
                             padding: 10px;
                             background-color: rgb(229, 233, 235);
+                            @include responsive(Laptop){
+                                padding: 6px;
+                            }
                         }
                     }
                 }
