--- a/sass/content/_MakeAppointment.scss
+++ b/sass/content/_MakeAppointment.scss
@@ -15,7 +15,7 @@
     .contactUs {
         width: 70%;
         display: flex;
-        background: #233468d3;
+        background:rgba(14, 59, 98, 0.867);
         color: aliceblue;
         box-shadow: 1px 5px 2px 0px rgb(220, 219, 219);
         @include responsive(Laptop){
@@ -57,6 +57,7 @@
             }
             h3 {
                 margin-top: 10px;
+                margin-bottom: 20px;
             }
 
             .formBox {
